# Patreon-web3

programs/patreon/: Cargo.toml
programs/patreon/src/: lib.rs
src/: idl.json
src/Pages/: Admin.js  Body.js  Home.js  donate.js
xNfts/: Readme.md  package.json
xNfts/data/: menu.ts  useFetch.tsx
xNfts/src/: App.tsx  index.tsx
xNfts/src/Home/: Claim.tsx  HomeRedirect.tsx  Lists.tsx  index.tsx
xNfts/src/Menu/: Faq.tsx  GariStaking.tsx  MenuLists.tsx  MenuRedirect.tsx  Pandas.tsx  PlayGames.tsx  UserHistory.tsx  index.tsx  pandasDetail.tsx  stakeDetail.tsx  unStakeDetail.tsx
xNfts/src/Tab1/: Stack1.tsx  Stack2.tsx  Stack3.tsx  index.tsx
xNfts/src/pages/: home(unused).tsx
xNfts/utils/: Icon.tsx  TokenNames.ts  style.css
