[package]
name = "patreon"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "patreon"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
solana-program = "1.10.26"
spl-token = { version="3.3.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="1.0.5", features = [ "no-entrypoint" ] }
